# cleaning_robot_solution

./: .gitignore  README.md  docker-compose.yml
app/: Dockerfile  Dockerfile.test  openapi.v1.yml  pyproject.toml  setup.cfg
app/cleaning_robot/: database.py  main.py  settings.py
app/cleaning_robot/path_calculation/: api.py  grid_helpers.py  models.py  robot_cleaning_simulator.py  unique_places_structure.py
app/tests/: .env  conftest.py  fixtures.py
app/tests/functional/: test_path_calculation_post.py
app/tests/load/: test_robot_cleaning_simulator_performance.py
app/tests/unit/: test_robot_cleaning_simulator.py
